# SUSTECH_UG_Resource

./: .gitignore  README.md
2022_MCM/Code/: C.ipynb  LSTM.ipynb
2022_OxfordOnlineCourse/Day2_LinearRegression/: BohrsAtomicModel.ipynb  Gravity_on_Moon.ipynb  OSAP_LinearRegression1.ipynb  RegressionGeneralFunction.ipynb  RegressionGeneralFunctionND.ipynb
2022_OxfordOnlineCourse/Day3_LogisticRegression/: OSAP_LogisticRegression1.ipynb  OSAP_LogisticRegression2.ipynb
2022_OxfordOnlineCourse/Day4_NN/: OSAP_NN1.ipynb  OSAP_NN2.ipynb
2022_OxfordOnlineCourse/Day5_Optimization/: torch.ipynb
2022_OxfordOnlineCourse/Day6_CNN/: Note_CNN.md  OSAP_CNNs_1.ipynb
2022_OxfordOnlineCourse/Day7_SVM/: OSAP_Day7_SVM_DT.ipynb
2022_OxfordOnlineCourse/Day8_Cluster&PCA/: OSAP_Clustering.ipynb  OSAP_PCA.ipynb
2022_OxfordOnlineCourse/Day9_ReainforceLearning/: OSAP_Gridworld.ipynb
CS102/CS102A-AeroplaneChess/: CS102A-AeroplaneChess.eml
CS103_AIIntroduction/: 机器学习在股票预测领域的应用.pptx
CS205_CPP/Assignment/AS1/: CMakeLists.txt  CS205 C C++ Programming_Assignment1.html  CS205 C C++ Programming_Assignment1.md  assign1.c
CS205_CPP/Assignment/AS1/code/: assign1_mat.c
CS205_CPP_project/src/: skin_detector.cpp
CS205_HCI/: CMakeLists.txt  LICENSE  README.md  main.cpp
CS205_HCI/src/: backgroud_removal.cpp  backgroud_removal.h  face_removal.cpp  face_removal.h  gesture_recognition.cpp  skin_detector.h  trajectory.cpp  trajectory.h
CS207/HW1/: Digital_design_assignment1.docx
人工智能导论/: 计算机科学与工程系_12011517_李子南_homework3.pptx  计算机科学与工程系_12011517_李子南_homework4.pptx  论文1.0.html  论文1.0.md
(+470 files in other folders)
